--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="./assets/css/style.css">
      <title>website</title>
     </head>
-    <!---->
+    <!--changed "div" to "header", "section", "articles", and "footer"-->
     <body>
         <header>
             <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,7 +26,8 @@
         </header>
         
         <section class="hero"></section>
-        <!---->
+        <!--consolidated class and id for more simple and cleaner css-->
+        <!--added "alt" to images with descriptions-->
         <section class="content">
             <article id="search-engine-optimization" class="contents">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="creative notebook with laptop and drawing pencils" class="float-left" />
@@ -36,39 +37,40 @@
                 </p>
             </article>
             <article id="online-reputation-management" class="contents">
-                <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" alt="computer with graph on it, reputation with upwards trend" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </article>
             <article id="social-media-marketing" class="contents">
-                <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" alt="a table of combined networking of everyones media" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </article>
         </section>
-        <!---->
+        <!--consolidated class and id for more simple and cleaner css-->
+        <!--added "alt" to images with descriptions-->
         <section class="benefits">
             <article class="benefit">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="symbol of less work turning into money"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </article>
             <article class="benefit">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="symbol of person spreading awareness"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </article>
             <article class="benefit">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" />
+                <img src="./assets/images/cost-management.png" alt="symbol of money"/>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
